syntax = "proto3";

package product;

option go_package = "products/product_pb";

message PerProduct {
  string id = 1;
  string name = 2;
  double price = 3;
}

message CreateProductResponse {
  PerProduct product = 1;
}

message CreateProductRequest {
  PerProduct product = 1;
}

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
}